<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="horizontal"

    android:padding="5dip"

    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/thumbnail"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"

        android:layout_marginRight="5dip"

        android:padding="3dip"
        android:weightSum="1">
        <ImageView

            android:id="@+id/list_row_event_photo"

            android:contentDescription="@string/app_name"

            android:layout_width="157dp"

            android:layout_height="100dp" />
    </LinearLayout>
    <!-- Rightend Arrow -->
    <ImageView

        android:id="@+id/list_row_arrow"

        android:contentDescription="@string/app_name"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"

        android:layout_centerVertical="true"

        android:src="@drawable/ic_keyboard_arrow_right_black_24px" />
    <TextView
        android:id="@+id/eID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <TextView
        android:id="@+id/list_row_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/thumbnail"
        android:text="@string/event_name"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_row_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:layout_below="@+id/list_row_event_title"
        android:layout_toEndOf="@+id/thumbnail" />

</RelativeLayout>